Csv file reader filter and calculation cache fixes